# gemseo-mlearning

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pip-tools.toml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG.rst  CREDITS.md  CREDITS.rst  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
doc_src/examples/mlearning/: README.rst
doc_src/examples/optimization/: plot_sbo_rastrigin.py
docs/: docstring_inheritance.py  gen_credits.py  licenses.md  references.bib
docs/developer_guide/: active_learning.md
docs/examples/active_learning/: README.md  ego_cv.py  ego_cv_boot.py  ego_gpr.py  ego_krig.py  ego_rbf.py  ego_rosenbrock.py  expected_improvement_bootstrap.py  expected_improvement_cv.py  expected_improvement_cv_boot.py  expected_improvement_gpr.py  limit_state.py  quantile_gpr.py
docs/examples/mlearning/: README.md
docs/examples/optimization/: README.md  plot_smt_ego.py  sbo_rastrigin.py
docs/examples/regression/: README.md  plot_smt.py  plot_smt_regressor.py
docs/examples/sampling/: README.md  plot_sample_discipline.py
docs/user_guide/: active_learning.md
docs/user_guide/active_learning/: active_learning_algo.md  exploration.md  level_set.md  optimization.md  quantile.md  what_active_learning_is.md
docs/user_guide/optimization/: al.md  smt.md
docs/user_guide/regression/: smt.md
public/: versions.json
public/2.0.0/: 404.html  references.bib  sitemap.xml
public/2.0.0/changelog/: index.html
public/2.0.0/search/: search_index.json
public/2.0.1/: 404.html  sitemap.xml
public/2.0.1/changelog/: index.html
public/2.0.1/licenses/: index.html
public/2.0.1/search/: search_index.json
public/2.0.1/user_guide/: index.html
public/3.0.0/: 404.html  objects.inv  sitemap.xml
public/3.0.0/changelog/: index.html
public/3.0.0/search/: search_index.json
public/3.0.0/user_guide/: index.html
public/3.1.0/: objects.inv  sitemap.xml
public/3.1.0/changelog/: index.html
public/3.1.0/credits/: index.html
public/3.1.0/licenses/: index.html
public/3.1.0/search/: search_index.json
public/develop/: 404.html  credits.md.jinja  gen_credits.py  index.html  objects.inv  sitemap.xml
public/develop/changelog/: index.html
public/develop/credits/: index.html
public/develop/licenses/: index.html
public/develop/search/: search_index.json
public/develop/user_guide/: index.html
requirements/: check.txt  dist.txt  doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.13.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9.txt
src/gemseo_mlearning/: __init__.py  api.py
src/gemseo_mlearning/active_learning/: __init__.py  active_learning_algo.py
src/gemseo_mlearning/adaptive/: __init__.py  acquisition.py  criterion.py  distribution.py
src/gemseo_mlearning/algos/: __init__.py
src/gemseo_mlearning/problems/: __init__.py
src/gemseo_mlearning/quality_measures/: __init__.py  mae_measure.py  me_measure.py
src/gemseo_mlearning/regression/: __init__.py  gradient_boosting.py  mlp.py  ot_gpr.py  (+6 more)
tests/: conftest.py  test_api.py  test_gemseo_mlearning.py  test_settings.py
tests/active_learning/: conftest.py  test_acquisition.py  test_acquisition_criterion.py
tests/adaptive/: conftest.py  test_acquisition.py  test_criteria.py  test_criterion.py
tests/algos/: __init__.py
tests/distributions/: conftest.py  test_distribution.py  test_kriging_distribution.py  test_regressor_distribution.py
tests/quality_measures/: test_mae_measure.py  test_me_measure.py
tests/regression/: conftest.py  test_gradient_boosting.py  test_mlp.py  test_ot_gpr.py  test_regressor_chain.py  test_smt_regression_model.py  test_smt_regressor.py  test_svm.py  test_thin_plate_spline.py
(+511 files in other folders)
