[project]
name = "gemseo-mlearning"
authors = [
    {name = "Matthias De Lozzo", email = "contact@gemseo.org"}
]
description = "A GEMSEO extension for machine learning."
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
requires-python = ">=3.9, <3.13"
dependencies = [
    "gemseo[all] >=6,<7",
    "numpy",
    # Version 1.25 break one of the quantile example.
    "openturns <1.25",
    "scikit-learn",
    "scipy",
    "smt[gpx] >=2.5.0,<=2.7.0",
]

[dependency-groups]
dev = [
    "covdefaults",
    "pytest <9",
    "pytest-cov",
    "pytest-xdist",
]
doc = [
    "black",
    "griffe-inherited-docstrings",
    "griffe-fieldz",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://gemseo.org"
Source = "https://gitlab.com/gemseo/dev/gemseo-mlearning"
Issues = "https://gitlab.com/gemseo/dev/gemseo-mlearning/-/issues"

[project.entry-points]
gemseo_plugins = { gemseo-mlearning = "gemseo_mlearning" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
