[project]
name = "gemseo-mlearning"
authors = [
    {name = "Matthias De Lozzo", email = "contact@gemseo.org"}
]
description = "A GEMSEO extension for machine learning."
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "gemseo[all] >=6.3,<7",
    "numpy",
    # Version 1.25 break one of the quantile example.
    "openturns <1.25",
    "scikit-learn",
    "scipy",
    "smt[gpx] >=2.5.0,<=2.9.5",
]

[dependency-groups]
dev = [
    "covdefaults >=2",
    "pytest >=7,<9",
    "pytest-cov >=5",
    "pytest-xdist >=3",
]
doc = [
    "black",
    "griffe-fieldz",
    "griffe-inherited-docstrings",
    "griffe-fieldz",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://gemseo.org"
Source = "https://gitlab.com/gemseo/dev/gemseo-mlearning"
Issues = "https://gitlab.com/gemseo/dev/gemseo-mlearning/-/issues"

[project.entry-points]
gemseo_plugins = { gemseo-mlearning = "gemseo_mlearning" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
